--- a/apis/locales/ja/faq.json
+++ b/apis/locales/ja/faq.json
@@ -1,1 +1,192 @@
-{}
+{
+    "title": "よくある質問",
+    "sections": {
+        "getting_started": "はじめに",
+        "game_settings": "ゲーム設定",
+        "tournaments": "トーナメント",
+        "account_configuration": "アカウント設定",
+        "more_features": "その他の機能",
+        "community_support": "コミュニティとサポート",
+        "donating": "Hivegame.comへの寄付"
+    },
+    "how_to_help": {
+        "question": "サイトをサポートするにはどうすればいいですか？",
+        "answers": {
+            "item1": "より多くのプレイヤーを連れてくるために情報を広めてください！",
+            "item2": "<github_link>GitHub</github_link>を通じてウェブサイトの開発、改善、バグ修正、メンテナンスに貢献してください",
+            "item3": "金銭的な寄付 - FAQのHivegame.comへの寄付セクションを参照してください"
+        }
+    },
+    "how_to_get_crown": {
+        "question": "なぜ一部のユーザーの名前の横に👑シンボルがあるのですか？",
+        "answer": "Hivegame.comをサポートするために自発的でオプションの金銭的寄付を行うユーザーは、名前の横に王冠シンボルを取得します。名前の横のシンボル以外に、寄付者は追加の特権を得ることはありません。"
+    },
+    "what_is_hive": {
+        "question": "Hiveとは何ですか？",
+        "answer": "Hiveは六角形のタイルで遊ぶペースの速い抽象戦略ゲームです。昆虫を使ったチェスと考えてください。そして覚えておいてください：常にあなたの女王を守ってください。出版社<gen42_link>Gen42</gen42_link>のウェブサイトで物理的なHiveセットを購入できます"
+    },
+    "hive_rules": {
+        "question": "Hiveのルールは何ですか？",
+        "answer": "各プレイヤーは、対戦相手の女王蜂を囲むことを目的として、タイルを配置または移動することを交互に行います。完全なルールは<rules_link>こちらでPDF形式</rules_link>で入手できます。またはビデオを好む場合は、<video_link>こちらでショートYouTubeビデオ</video_link>を見ることができます。"
+    },
+    "expansions_supported": {
+        "question": "どの拡張がサポートされていますか？",
+        "answer": "公式の3つすべて：蚊：隣接する昆虫の能力をコピーします。てんとう虫：ハイブの上を正確に2歩、下に1歩移動します。ダンゴムシ：ターンごとに1回隣接するピースを投げます。"
+    },
+    "resign_ok": {
+        "question": "負けるとわかっているゲームを諦めても大丈夫ですか？",
+        "answer": "はい。チェスと同じように、勝利の可能性がないと思う場合は、ボード上で最後まで戦わずに試合を譲ることは完全に受け入れられます。"
+    },
+    "signup_required": {
+        "question": "登録せずにプレイできますか？",
+        "answer": "いいえ。しかし、アカウントの作成は無料で簡単です。"
+    },
+    "mobile_friendly": {
+        "question": "モバイルフレンドリーですか？",
+        "answer": "もちろんです。Hivegame.comはモバイル、タブレット、デスクトップでスムーズに動作します。試合の途中で指が滑らないように注意してください。"
+    },
+    "mobile_app": {
+        "question": "モバイルアプリはありますか？",
+        "answer": "まだありません。Hivegame.comはプログレッシブウェブアプリとして利用できます。アプリのような体験のために、モバイルのホーム画面に追加するだけです。"
+    },
+    "profile_navigation": {
+        "question": "プロフィールページにどのようにナビゲートしますか？",
+        "answer": "ログインしているときは、画面右上のユーザー名をクリックしてプロフィールページに移動してください。"
+    },
+    "game_types": {
+        "question": "ゲームは通信制かリアルタイムですか？",
+        "answer": "Hivegame.comは両方をサポートしています。ライブマッチをプレイするか、ゲーム設定時に使用される時間設定に基づいて、数時間後にタブに戻ることができます。"
+    },
+    "start_game": {
+        "question": "どのようにゲームを開始しますか？",
+        "answer": "ホームページで、6つのタイムコントロール設定のいずれかをクリックしてゲームを開始するか、「カスタム」ボタンをクリックして異なる設定を選択してください。"
+    },
+    "time_controls": {
+        "question": "ホームページのタイムコントロール設定は何を意味しますか？",
+        "answer": "タイムコントロール設定はゲームの速度を決定します。例として、3+3はゲームが開始されると各人が合計3分を持つことを意味します。彼らのターンになると、時間がカウントダウンを開始します。ターンが完了すると、ターンの終わりに利用可能な時間に3秒が追加されます。他のすべての時間フォーマットは同様に機能します。"
+    },
+    "realtime_vs_correspondence": {
+        "question": "リアルタイム、通信制、タイムレスゲームの違いは何ですか？",
+        "answer": "リアルタイムゲームは選択された時間設定内で完了する必要があるため、通常は両方のプレイヤーが同時にオンラインである必要があります。通信制ゲームは一般的に数日にわたって、またはx日ごとに少なくとも1回の動きで展開されます。時間内に動きをプレイしない場合、ゲームに負けます。タイムレスゲームは自明です。"
+    },
+    "casual_vs_rated": {
+        "question": "カジュアルとレート戦の違いは何ですか？",
+        "answer": "ゲームをレート戦（Glicko-2システム）にして、スキルの推定を得て、時間の経過とともに進歩を追跡することを選択できます。初心者は1500の評価から始まります。一般的に、勝利は評価を上げ、ゲームに負けると評価が下がります。より高い評価はより高いスキルを意味します。はるかに低い評価の対戦相手に対するゲームに勝つことは、評価を大幅に上げることはありません。しかし、より高い評価の対戦相手に対するゲームに勝つことは、評価を大幅に上げることができます。カジュアルゲームの勝敗は評価に影響しません。注意：レート戦は3つの拡張すべてが使用されている場合にのみ利用可能です（MLPフォーマット）。"
+    },
+    "why_elo_has_questionmark": {
+        "question": "なぜ私の評価の横に?がありますか？",
+        "answer": "評価の横の?は、評価が仮のものであることを示しています。つまり、システムがより高い精度で評価を決定するために統計的に有意な数のゲームをプレイするまで、評価のより高い変動性を期待する必要があります。"
+    },
+    "base_vs_mlp": {
+        "question": "ベースフォーマットとMLPフォーマットの違いは何ですか？",
+        "answer": "MLPはデフォルトの競技設定であり、蚊、てんとう虫、ダンゴムシのピース（別名MLP）を使用します。ベースゲームにはこれら3つの昆虫がありません。"
+    },
+    "private_vs_public": {
+        "question": "プライベートとパブリックの違いは何ですか？",
+        "answer": "パブリックゲームはホームページで利用でき、他のプレイヤーが参加できます。プライベートゲームは、他のプレイヤーに送信できるリンクを提供します。"
+    },
+    "rating_range": {
+        "question": "評価範囲とは何ですか？",
+        "answer": "この設定は、あなたの評価の特定の範囲変動内の対戦相手のみがマッチを受け入れることを許可します。これにより、あなたの好みに応じて評価にこれほど近い（またはそうでない！）対戦相手を選択できることが保証されます。"
+    },
+    "color_selection": {
+        "question": "白、ランダム、黒の六角形とは何ですか？",
+        "answer": "ゲームを設定するとき、白、黒、またはシステムによってランダムに決定されたものとして開始するかどうかを選択します。"
+    },
+    "how_to_check_stack": {
+        "question": "タイルの下に何があるかをどのように見ますか？",
+        "answer": "積み重ねられたタイルを右クリックまたはタップ（モバイル）して展開します。押し続けている間、下のタイルが表示されます。"
+    },
+    "spectate_games": {
+        "question": "ゲームを観戦できますか？",
+        "answer": "はい！進行中のリアルタイムゲームはホームページで表示されます。観戦するには任意のものをクリックしてください。"
+    },
+    "turn_alerts": {
+        "question": "自分のターンになったときにアラートが表示されますか（ターンベースゲーム）？",
+        "answer": "はい、ページの上部に赤いメッセージアイコンがあり、ターンがあるゲームの数を示す数字が表示されます。または、プロフィールページに移動して、現在プレイ中、未開始のトーナメント、完了したゲームでフィルタリングできます。"
+    },
+    "correspondence_notifications": {
+        "question": "通信制ゲームで自分のターンになったときに通知を受け取ることはできますか？",
+        "answer": "DiscordアカウントをHivegame.comプロフィールに接続し、busybeeボットから通知を受け取ることができます。右上のプロフィールボタンをクリックし、「アカウント編集」をクリックしてください"
+    },
+    "chat_basics": {
+        "question": "チャットはどのように機能しますか？",
+        "answer": "チャット機能は非常に開発中です。問題があることを認識しているので、使用する際に覚えておくべき重要なことがあります：1. 現在、チャットはデータベースに保持されないため、アップデートをデプロイするたびにチャットメッセージが失われます！2. 今のところ、ゲーム内でのみチャットが可能です（ダイレクトメッセージなどの方法は今後追加される予定です）。観戦者はプレイヤーのチャットを見ることができず、プレイヤーも観戦者のチャットを見ることができません。3. 時々、チャットの赤い通知が新しいメッセージがないときに新しいメッセージを表示することがあります。"
+    },
+    "tournament_entry": {
+        "question": "誰でもトーナメントに参加できますか？参加費はありますか？賞品はどうですか？",
+        "answer": "はい、初心者でもトーナメントに参加できます。ただし、一部のトーナメントは評価によって制限されているか、トーナメント主催者の決定により招待制のみの場合があります。この記事の執筆時点では、参加費はなく、賞品もありません（自慢する権利と評価ポイントの増加以外は！）"
+    },
+    "tournament_duration": {
+        "question": "トーナメントの期間はどのくらいですか？何ゲームですか？スケジュールをどのように調整しますか？",
+        "answer": "トーナメントページは通常、これらの詳細すべてを概説するはずです。質問がある場合は、トーナメント主催者に連絡してください。現在、ラウンドロビントーナメントのみが利用可能ですが、より多くの形式がまもなく追加される予定です。"
+    },
+    "tournament_stats": {
+        "question": "トーナメント結果表で、H2H、WB、SB、完了とは何ですか？",
+        "answer": "H2H - 直接対戦記録、これは最初のタイブレーク基準です。WB - 黒としての勝利、これは2番目のタイブレーク基準です。SB - ソンネボルン・ベルガー得点、これは3番目のタイブレーク基準です。完了 - 完了したゲームの数。"
+    },
+    "tournament_games": {
+        "question": "進行中/まだ開始されていないゲームをどこで見ることができますか？",
+        "answer": "プロフィールページに移動すると、現在プレイ中と未開始のトーナメントゲームのフィルターが表示されます。"
+    },
+    "change_password": {
+        "question": "パスワードを変更するにはどうすればいいですか？",
+        "answer": "プロフィール > アカウント編集に移動するか、<edit_link>このリンクを使用してください</edit_link>"
+    },
+    "move_confirmation": {
+        "question": "異なる手の確認モードは何を意味しますか？",
+        "answer": "手を打つ際には3つのモードがあります：1. シングルクリック - 速い方法：速いゲームで時間を無駄にしたくない場合。シングルクリックが即座に手を打って確認するため、ピースを間違って配置したり動かしたりしないよう注意してください。2. ダブルクリック - デフォルト：最初のクリックでピースを配置/移動し、2回目のクリックで手を確認します。3. クロック確認 - 安全な方法：最初のクリックで配置/移動し、その後手を確認するために自分のタイマーをクリックします。ダブルクリックまたはクロック確認モードが推奨されます。"
+    },
+    "game_analysis": {
+        "question": "分析ツールで完了したゲームをレビューできますか？",
+        "answer": "はい、完了したゲームには顕微鏡アイコンがあり、ゲームを分析モードで読み込みますが、この機能は現在開発中なので、まだあまり期待しないでください。"
+    },
+    "play_bots": {
+        "question": "ボットと対戦できますか？",
+        "answer": "はい、ホームページの「ボットプレイ」ボタンをクリックし、対戦したいボットを選択してください。タイムレスゲームがすぐに開始されます。"
+    },
+    "get_better": {
+        "question": "Hiveでどのように上達できますか？",
+        "answer": "開始するための厳選されたリソースのリストについては、サイトの<resources_link>リソースセクション</resources_link>をチェックしてください。"
+    },
+    "community_forum": {
+        "question": "コミュニティフォーラムはありますか？",
+        "answer": "はい！World Hive Community Discordサーバー<discord_link>こちら</discord_link>に参加してください - フレンドリーなプレイヤーと戦略的な議論でいっぱいです。"
+    },
+    "play_specific_players": {
+        "question": "特定のプレイヤーとのみプレイできますか？",
+        "answer": "もちろん！プレイヤーの名前の横にある交差した剣のアイコンを使って直接挑戦することができます。または、プライベートゲームを作成し（ホームページの「Custom」ボタンをクリック）、リンクを個人的に共有してください。リンクを持つプレイヤーのみが参加できます。"
+    },
+    "report_bugs": {
+        "question": "バグを報告したり、新機能を提案したりできるのはどこですか？",
+        "answer": "Hivegame.com Discordサーバー<discord_link>こちら</discord_link>に参加し、適切なチャンネルを使用して開発者にメッセージを送信できます。"
+    },
+    "opponent_is_abusive": {
+        "question": "対戦相手がゲーム/チャットで乱暴だったり破壊的だったり、不適切なユーザー名を持っている場合はどうすればいいですか？",
+        "answer": "行動のスクリーンショットを撮り、Discord @klautcomputing / @ionoi経由で連絡してください。解決いたします。"
+    },
+    "why_not_in_top_players": {
+        "question": "なぜ私は上位プレイヤーに表示されないのですか？",
+        "answer": "システムがあなたの評価がどれほど正確かを確信するのに十分なゲームをまだプレイしていません。もう少しゲームをプレイし続け、うまくいけば勝利し、表示されるでしょう。"
+    },
+    "can_i_play_base_game": {
+        "question": "拡張なしでプレイできますか？",
+        "answer": "はい。ゲームを作成するときに拡張を使用するかどうかを切り替えることができ、拡張なしでプレイすることは初心者に良いです！レート戦は拡張が使用されている場合にのみ利用可能です。これが公式の競技フォーマットだからです。"
+    },
+    "how_to_recover_password": {
+        "question": "パスワードを忘れました！今何をすればいいですか？",
+        "answer": "Hivegame.comで使用しているのと同じメールアドレスからleex@klautcomputing.deにメールを送信し、パスワードリセットを要求してください。"
+    },
+    "can_i_set_up_a_tournament": {
+        "question": "自分のトーナメントを作成できますか？",
+        "answer": "はい！トーナメント作成をクリックするだけで、残りは自明なはずです。"
+    },
+    "donation_amount": {
+        "question": "推奨される寄付額はいくらですか？",
+        "answer": "大小を問わず、すべての寄付はHivegame.comの運営を支援し、感謝して受け取られます。クレジットカードと銀行取引手数料を考慮して、最低5EURの寄付が提案されています。"
+    },
+    "how_donate": {
+        "question": "どのように寄付しますか？",
+        "answer": "ナビゲーションバーの寄付をクリックするか、<donate_link>このリンクを使用してください</donate_link>"
+    }
+}
