--- a/apis/locales/ro/faq.json
+++ b/apis/locales/ro/faq.json
@@ -1,104 +1,192 @@
 {
-    "title": "Întrebări frecvente",
-    "what_is_hivegame": {
-        "question": "Ce este hivegame.com?",
-        "answer": "hivegame.com este un efort comunitar pentru a crea o nouă platformă online de a juca Hive® gratuit. hivegame.com este fără reclame, open source, dezvoltat de membrii comunității și susținut oficial de creatorul Hive® John Yianni."
+    "title": "Frequently asked questions",
+    "sections": {
+        "getting_started": "Să începem",
+        "game_settings": "Setări joc",
+        "tournaments": "Turnee",
+        "account_configuration": "Configurare cont",
+        "more_features": "Mai multe funcții",
+        "community_support": "Comunitate & Suport",
+        "donating": "Donații pentru Hivegame.com"
     },
     "how_to_help": {
-        "question": "Cum pot ajuta acest proiect să prospere?",
+        "question": "Cum pot susține site-ul?",
         "answers": {
-            "item1": "Ne poți ajuta contribuind la <source_link>codul sursă.</source_link>",
-            "item2": "Ne poți sprijini cu idei, feedback și grafică pe <discord_link>Discord</discord_link>",
-            "item3": "Poți susține proiectul cu o <donate_link>donație.</donate_link> Iar când cheltuielile sunt acoperite, donația ta ajută la susținerea dezvoltatorilor."
+            "item1": "Spune-le și altora despre joc, ca să vină mai mulți jucători!",
+            "item2": "Contribuie la dezvoltarea site-ului, la îmbunătățiri sau la rezolvarea de bug-uri prin <github_link>GitHub</github_link>.",
+            "item3": "Donează - vezi secțiunea cu donații din această pagină."
         }
-    },
-    "how_does_it_operate": {
-        "question": "Cum funcționează hivegame.com?",
-        "answer": "Este dezvoltat de membrii comunității și 100% bazat pe donații. hivegame.com nu va colecta niciodată datele utilizatorilor, nu va afișa reclame sau implementa nimic care să distragă atenția de la joc sau să genereze venituri."
     },
     "how_to_get_crown": {
-        "question": "Cum obțin o 👑 lângă numele de utilizator?",
-        "answer": "Donând proiectului!"
+        "question": "De ce au unii jucători o coroană 👑 lângă nume?",
+        "answer": "Jucătorii care aleg să susțină Hivegame.com printr-o donație primesc simbolul 👑 lângă numele lor. În rest, nu beneficiază de avantaje suplimentare."
     },
     "what_is_hive": {
-        "question": "Ce este Hive?",
-        "answer": "Hive este un joc de strategie abstract, premiat, creat de John Yianni în 2000 și publicat de <gen42_link>Gen42</gen42_link>."
+        "question": "Ce e jocul Hive?",
+        "answer": "Hive e un joc abstract de strategie, cu ritm rapid, jucat cu piese hexagonale. E ca un șah cu insecte. Și nu uita: protejează-ți mereu Regina! Poți cumpăra o versiune fizică de pe site-ul editorului <gen42_link>Gen42</gen42_link>."
     },
-    "how_to_play_with_friends": {
-        "question": "Pot să joc cu un prieten?",
-        "answers": {
-            "item1": "Da, poți crea un joc făcând clic pe butonul 'creează un joc' de pe pagina principală, apoi selectează opțiunea ‘privat’ și trimite linkul unui prieten. Acesta va trebui să aibă/creeze un cont pentru a juca.",
-            "item2": "Alternativ, poți trimite o provocare directă folosind pictograma 'săbii încrucișate' de lângă fiecare utilizator, ceea ce va trimite o provocare directă acelui utilizator.",
-            "item3": "Desigur, poți de asemenea crea o provocare deschisă, care poate fi acceptată de oricine se încadrează în criteriile Elo, și speri ca prietenul să fie primul care acceptă jocul tău."
-        }
+    "hive_rules": {
+        "question": "Cum se joacă Hive?",
+        "answer": "Fiecare jucător plasează sau mută piese, cu scopul de a înconjura regina adversarului. Poți citi regulile complete <rules_link>aici (PDF)</rules_link> sau să vezi un <video_link>scurt video pe YouTube</video_link>."
+    },
+    "expansions_supported": {
+        "question": "Ce extensii sunt incluse?",
+        "answer": "Toate cele 3 oficiale: Țânțarul - copiază abilitățile insectelor vecine; Buburuza - face 2 pași peste stup, apoi coboară; Aselul (Pillbug) - poate muta o piesă vecină o dată pe tură."
+    },
+    "resign_ok": {
+        "question": "Pot să renunț la un joc pe care știu că îl pierd?",
+        "answer": "Da, exact ca în șah. Dacă simți că nu mai ai șanse, poți concede fără să joci până la capăt."
+    },
+    "signup_required": {
+        "question": "Pot juca fără cont?",
+        "answer": "Nu, e necesar un cont, dar înregistrarea e rapidă și gratuită."
+    },
+    "mobile_friendly": {
+        "question": "Merge bine pe telefon?",
+        "answer": "Da, Hivegame.com funcționează bine pe mobil, tabletă și desktop. Ai grijă doar să nu alunece degetele în timpul meciului."
+    },
+    "mobile_app": {
+        "question": "Este disponibilă o aplicație mobilă?",
+        "answer": "Nu încă, dar site-ul funcționează ca o aplicație web progresivă — o poți adăuga pe ecranul telefonului pentru o experiență similară cu o aplicație."
+    },
+    "profile_navigation": {
+        "question": "Cum ajung la pagina mea de profil?",
+        "answer": "După ce te conectezi, dă clic pe numele tău din colțul dreapta sus al ecranului."
+    },
+    "game_types": {
+        "question": "Se joacă în timp real sau pe ture?",
+        "answer": "Ambele variante sunt disponibile. Poți juca un meci live sau reveni mai târziu, în funcție de setările de timp."
+    },
+    "start_game": {
+        "question": "Cum încep un joc nou?",
+        "answer": "Pe prima pagină, alege unul dintre cele 6 controale de timp sau apasă 'personalizat' pentru setări proprii."
+    },
+    "time_controls": {
+        "question": "Ce înseamnă opțiunile de timp de pe prima pagină?",
+        "answer": "Controlează ritmul jocului. De exemplu, 3+3 înseamnă 3 minute la început și câte 3 secunde bonus după fiecare mutare. Celelalte funcționează la fel."
+    },
+    "realtime_vs_correspondence": {
+        "question": "Care e diferența între Timp Real, Corespondență și Fără Timp?",
+        "answer": "Jocurile în timp real se joacă pe loc. Cele prin corespondență pot dura mai multe zile. Jocurile fără timp nu au limită de durată. Dacă nu muți în timp, pierzi automat."
+    },
+    "casual_vs_rated": {
+        "question": "Ce diferență e între Necotat și Cotat?",
+        "answer": "Jocurile evaluate îți influențează ratingul (Glicko-2). Toți încep de la 1500. Câștigi = crește ratingul, pierzi = scade. Necotat nu afectează ratingul. Jocurile evaluate necesită toate cele 3 extensii (MLP)."
+    },
+    "base_vs_mlp": {
+        "question": "Ce e formatul Base vs. MLP?",
+        "answer": "MLP (țânțar, buburuză, pillbug) este formatul competitiv. Jocul de bază nu include aceste piese."
+    },
+    "private_vs_public": {
+        "question": "Ce înseamnă joc privat vs. public?",
+        "answer": "Un joc public apare pe pagina principală și oricine îl poate accesa. Un joc privat îți dă un link pe care îl trimiți cui vrei tu."
+    },
+    "rating_range": {
+        "question": "Ce face opțiunea de interval de rating?",
+        "answer": "Îți permite să alegi dacă accepți doar jucători dintr-un interval apropiat de ratingul tău."
+    },
+    "color_selection": {
+        "question": "Ce înseamnă opțiunile Alb, Negru, Aleator?",
+        "answer": "Poți alege să începi cu piesele albe, negre sau să se aleagă automat."
+    },
+    "spectate_games": {
+        "question": "Pot să mă uit la alte jocuri?",
+        "answer": "Da! Meciurile live sunt pe pagina principală. Dă clic pe unul ca să-l urmărești."
+    },
+    "turn_alerts": {
+        "question": "Primesc notificare când e rândul meu?",
+        "answer": "Da, apare o iconiță roșie sus, cu numărul jocurilor în care e rândul tău. Sau mergi în profil și filtrează jocurile."
+    },
+    "correspondence_notifications": {
+        "question": "Pot primi notificări pentru jocuri prin corespondență?",
+        "answer": "Da! Le poți primi prin Discord dacă îți conectezi contul la profilul tău Hivegame.com."
+    },
+    "chat_basics": {
+        "question": "Cum funcționează chat-ul?",
+        "answer": "Chatul e în lucru și mai are probleme. Deocamdată, mesajele se pierd la actualizări și funcționează doar în timpul jocurilor."
+    },
+    "tournament_entry": {
+        "question": "Poate oricine intra în turnee? Se plătește? Există premii?",
+        "answer": "Da, chiar și începătorii. Unele turnee pot avea restricții. În general nu sunt taxe sau premii — doar faimă și rating."
+    },
+    "tournament_duration": {
+        "question": "Cât durează un turneu? Câte jocuri se joacă?",
+        "answer": "Detaliile sunt pe pagina turneului. Momentan, doar format Round-Robin este disponibil."
+    },
+    "tournament_stats": {
+        "question": "Ce înseamnă H2H, WB, SB, Terminat în tabelele de turneu?",
+        "answer": "H2H: rezultate directe; WB: câștiguri ca negru; SB: punctaj Sonneborn-Berger; Terminat: câte jocuri s-au încheiat."
+    },
+    "tournament_games": {
+        "question": "Unde văd jocurile de turneu în curs?",
+        "answer": "Mergi în profil și folosește filtrele pentru a vedea cele în desfășurare sau neîncepute."
+    },
+    "change_password": {
+        "question": "Cum îmi schimb parola?",
+        "answer": "Intră în profil > Editează contul sau <edit_link>apasă aici</edit_link>."
+    },
+    "move_confirmation": {
+        "question": "Ce înseamnă modurile de confirmare a mutării?",
+        "answer": "1. Clic simplu - rapid dar riscant. 2. Dublu clic - implicit și sigur. 3. Confirmare prin ceas - cel mai sigur, dar mai lent. Se recomandă modurile 2 sau 3."
+    },
+    "game_analysis": {
+        "question": "Pot analiza jocurile terminate?",
+        "answer": "Da. Apare un icon cu microscop. Funcția e în lucru, așa că e destul de simplă momentan."
+    },
+    "play_bots": {
+        "question": "Pot juca împotriva unui bot?",
+        "answer": "Da! Apasă „Joacă Bot” pe pagina principală, alege unul și jocul începe imediat (fără timp)."
+    },
+    "community_forum": {
+        "question": "Există un loc unde pot discuta cu alți jucători?",
+        "answer": "Da! Intră pe serverul Discord <discord_link>aici</discord_link> — comunitatea e activă și prietenoasă."
+    },
+    "report_bugs": {
+        "question": "Unde pot raporta buguri sau da sugestii?",
+        "answer": "Intră pe Discord-ul Hivegame.com <discord_link>aici</discord_link> și scrie-le dezvoltatorilor pe canalul potrivit."
+    },
+    "get_better": {
+        "question": "Cum pot deveni mai bun la Hive?",
+        "answer": "Verifică <resources_link>Secțiunea Resurse</resources_link> — conține ghiduri și sfaturi utile."
+    },
+    "play_specific_players": {
+        "question": "Pot juca cu un anumit jucător?",
+        "answer": "Sigur. Folosește simbolul cu săbii de lângă numele jucătorului sau creează un joc privat și trimite linkul."
+    },
+    "donation_amount": {
+        "question": "Care este suma de donație recomandată?",
+        "answer": "Toate donațiile, mari și mici, ajută la menținerea funcționării Hivegame.com și sunt primite cu recunoștință. Considerând taxele de card de credit și tranzacții bancare, se sugerează o donație minimă de 5 EUR."
+    },
+    "how_donate": {
+        "question": "Cum donez?",
+        "answer": "Click on Donate in the navigation bar or <donate_link>use this link</donate_link>"
     },
     "how_to_check_stack": {
-        "question": "Cum pot vedea ce este sub o piesă?",
-        "answers": {
-            "item1": "Pe mobil, apasă lung pe stivă pentru a o extinde. După ce este extinsă, poți muta degetul pentru a vedea și piesa de sub deget.",
-            "item2": "Pe desktop, fă clic dreapta pe stivă și aceasta va rămâne extinsă până eliberezi clicul."
-        }
-    },
-    "what_are_cornfirmation_modes": {
-        "question": "Ce înseamnă diferitele moduri de confirmare?",
-        "description": "Când faci o mutare, există 3 moduri:",
-        "answers": {
-            "item1": "Dublu clic - Modul implicit, primul clic plasează piesa și al doilea clic confirmă mutarea.",
-            "item2": "Un singur clic - Mai rapid, dacă vrei să nu pierzi timp în jocuri rapide. Ai grijă să nu greșești plasarea, deoarece cu un singur clic confirmi mutarea.",
-            "item3": "Confirmare la ceas - Cel sigur, dacă vrei să eviți mutările din greșeală. Mai întâi selectezi unde să plasezi/muți, apoi pentru a confirma trebuie să apeși pe propriul ceas."
-        }
+        "question": "Cum văd ce este sub o piesă?",
+        "answer": "Fă clic dreapta sau apasă lung (pe mobil) o piesă stivuită pentru a o extinde. Vei vedea piesele de dedesubt cât timp ții apăsat."
     },
     "can_i_play_base_game": {
-        "question": "Pot juca jocul de bază fără expansiuni?",
-        "answer": "Da, dar de ce ai face asta? Lăsând gluma deoparte, jocul de bază este limitat la jocuri fără elo. Hive PLM (toate cele trei expansiuni: Pillbug, Ladybug, Mosquito) este formatul oficial folosit în turnee. De asemenea, este cel mai provocator și distractiv!"
-    },
-    "what_rating_system": {
-        "question": "Ce sistem de evaluare folosește hivegame.com?",
-        "answer": "Folosim sistemul <glicko2_link>Glicko-2</glicko2_link>. Parametrii sunt similari cu cei de la Lichess."
-    },
-    "how_to_recover_password": {
-        "question": "Ce pot face dacă mi-am uitat parola?",
-        "answer": "Nu avem încă funcționalitate automată de recuperare a parolei, ne poți contacta pe Discord @klautcomputing / @ionoi pentru a-ți reseta parola."
-    },
-    "why_basic_chat": {
-        "question": "De ce chatul este atât de simplu?",
-        "details": "Funcția de chat este încă în dezvoltare, suntem conștienți de problemele sale, iată câteva aspecte importante de reținut când îl folosești:",
-        "answers": {
-            "item1": "În prezent, chatul nu este salvat în baza de date, așa că atunci când facem un update, mesajele vor fi pierdute!",
-            "item2": "Deocamdată, este posibil să comunici doar într-un joc (mesajele directe și alte moduri vor fi adăugate), spectatorii nu văd chatul jucătorilor și nici jucătorii nu văd chatul spectatorilor.",
-            "item3": "Uneori notificarea roșie de chat arată mesaje noi când de fapt nu sunt."
-        }
+        "question": "Pot juca fără expansiuni?",
+        "answer": "Da, poți juca fără extensii — mai ales dacă ești la început. Doar jocurile cu toate extensiile pot fi cotate (formatul MLP)."
     },
     "opponent_is_abusive": {
-        "question": "Ce pot face dacă adversarul meu este abuziv sau deranjant în joc/chat sau are un nume de utilizator inadecvat?",
-        "answer": "Fă o captură de ecran și contactează-ne pe Discord @klautcomputing / @ionoi și vom rezolva problema."
-    },
-    "where_to_meet_other_players": {
-        "question": "Unde pot cunoaște restul comunității de Hive® din întreaga lume?",
-        "answer": "Găsește linkurile către rețelele noastre sociale <resources_link>aici</resources_link>. Comunitatea Hive® este foarte prietenoasă și vei găsi cu siguranță pe cineva aproape pentru a juca față în față!"
+        "question": "Ce fac dacă un jucător e abuziv sau are un nume nepotrivit?",
+        "answer": "Fă o captură de ecran și contactează-ne pe Discord la @klautcomputing sau @ionoi. Ne ocupăm noi."
     },
     "why_elo_has_questionmark": {
-        "question": "De ce Elo-ul meu are un “?” în spatele lui?",
-        "answer": "Acest lucru se întâmplă în timp ce Elo-ul tău este încă incert. Dispare odată ce ai jucat suficiente jocuri și odată ce ? dispare, poți apărea și în clasamente."
+        "question": "De ce este un ? langa rating-ul meu?",
+        "answer": "Semnul ? înseamnă că ratingul tău e încă provizoriu. Sistemul are nevoie de mai multe jocuri pentru a-l calcula cu acuratețe."
     },
     "why_not_in_top_players": {
-        "question": "De ce nu apar în lista jucătorilor de top?",
-        "answer": "Nu ai jucat încă suficiente jocuri pentru ca sistemul să fie sigur de cât de exact este Elo-ul tău. Continuă să joci câteva jocuri în plus, ideal câștigă-le, și vei apărea în clasament."
+        "question": "De ce nu apar in topul jucatiorilor?",
+        "answer": "Probabil nu ai jucat destule partide pentru ca sistemul să-ți calculeze un rating de încredere. Joacă câteva în plus și o să apari."
     },
-    "how_to_review_games": {
-        "question": "Pot analiza partidele încheiate?",
-        "answer": "Da, jocurile încheiate au o icoană microscop care va încărca jocul în modul de analiză, această funcționalitate este încă în dezvoltare, așa că nu te aștepta la prea multe încă."
-    },
-    "where_to_learn_more": {
-        "question": "Cum pot învăța mai multe despre strategia Hive?",
-        "answer": "Plănuim să adăugăm un tutorial interactiv pentru a te ajuta să înveți și să înțelegi toate ideile strategice din spatele jocului, în viitor verifică secțiunea <resources_link>resurse</resources_link> pentru cărți, videoclipuri și discord!"
+    "how_to_recover_password": {
+        "question": "Am uitat parola. Ce fac?",
+        "answer": "Trimite un email la leex@klautcomputing.de de pe adresa folosită la cont și cere o resetare."
     },
     "can_i_set_up_a_tournament": {
         "question": "Pot organiza un turneu?",
-        "answer": "Da, deși încă lucrăm la asta. Ne poți contacta pe Discord dacă vrei să ne ajuți."
-    },
-    "can_i_play_with_bots": {
-        "question": "Pot juca împotriva unui bot?",
-        "answer": "Această funcționalitate nu este încă suportată, dar ar putea fi în curând (contactează-ne dacă vrei să ajuți la dezvoltare)."
+        "answer": "Da! Apasă pe 'Creează Turneu' și urmează pașii. E destul de intuitiv."
     }
 }
